files/cloudformation-vpc-igw-subnet-ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
    This template deploys a VPC, with public subnet, 
    IGW, RouteTable, SecurityGroup, EC2

Parameters:
  VpcName:
    Type: String
    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
    MinLength: 1
    MaxLength: 16
    Default: cherkavi
    Description: prefix for all of elements in Stack
  Ec2KeyPairName:
    Description: Name of an existing EC2 KeyPair to enable SSH access into the WordPress web server
    Type: AWS::EC2::KeyPair::KeyName
    Default: cherkavi

Resources: 
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      InstanceTenancy: "default"
      Tags:
      - Key: "Name"
        Value: !Ref "VpcName"   

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:   
      - Key: "Name"
        Value: !Join ["", [Ref: VpcName, "-igw"]]

  SubnetPublic:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref "VPC"
      CidrBlock: "10.0.0.0/20"
      AvailabilityZone: !Select 
        - 0
        - !GetAZs 
          Ref: 'AWS::Region'

  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref "VPC"

  VPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref "VPC"
      InternetGatewayId: !Ref "InternetGateway"

  InternetRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable

  SubnetPublicRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetPublic

  Ec2SecurityGroup80:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http & ssh to client host
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: -1
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0

  Ec2WithApache:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-007855ac798b5175e
      KeyName: cherkavi
      NetworkInterfaces: 
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet: 
            - !Ref Ec2SecurityGroup80
          SubnetId: 
            !Ref SubnetPublic
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo apt update
          sudo apt install apache2 -y
          sudo ufw allow 'Apache'
          sudo systemctl start apache2


Outputs:
  VpcId:
    Value: !Ref VPC
    Description: id of created VPC
  Ec2PublicIp:
    Value: !Ref Ec2WithApache
    Description: id of created VPC
